# dvorak-message

./: Cargo.toml  README.md
dc-message-client/: Cargo.toml
dc-message-client/src/: client.rs  input.rs  main.rs
dc-message-server/: Cargo.toml
dc-message-server/src/: args.rs  main.rs  server.rs
dc-message-server/src/dctor/: client.rs  dctor.rs  mod.rs  server.rs  supervisor.rs
dctor/: Cargo.toml
dctor/src/: client.rs  dctor.rs  lib.rs  server.rs  supervisor.rs
dvorak-message/: Cargo.toml
dvorak-message/src/: message.rs
dvorak-message/src/message/: message_type.rs
src/: lib.rs  message.rs
src/message/: macros.rs  message_type.rs
