[package]
name = "dvorak_message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = [
    "rt",
    "net",
    "io-util",
    "macros",
    "rt-multi-thread",
], optional = true }
bytes = { version = "1.3.0", optional = true }


[features]
default = ["full"]
full = ["message"]
message = ["tokio", "bytes"]
