[package]
name = "dc_message_server"
description = "a server of Dvorak Message for communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = [
    "rt",
    "net",
    "sync",
    "io-util",
    "io-std",
    "macros",
    "rt-multi-thread",
] }
clap = { version = "4.0.32", features = ["derive"] }
once_cell = "1.17.0"
bytes = "1.3.0"
dvorak_message = { path = "../dvorak-message" }
async-trait = "0.1.68"
